2001-08-22  Darin Adler  <darin@bentspoon.com>

	* configure.in: Require newer libart.
	* rsvg.c: (rsvg_render_bpath): Get rid of bug workaround for
	old libart.

2001-08-22  Darin Adler  <darin@bentspoon.com>

	* Makefile.am: Remove things that are duplicates of stuff
	already moved into libart. Only install public headers.

	* art_render.c: Removed.
	* art_render.h: Removed.
	* art_render_gradient.c: Removed.
	* art_render_gradient.h: Removed.
	* art_render_svp.c: Removed.
	* art_render_svp.h: Removed.
	* art_rgba.c: Removed.
	* art_rgba.h: Removed.

	* configure.in: Update for autoconf 2.52. Sadly, the version is
	now repeated twice, but I don't see how to avoid this.
	
	* librsvg-features.h.in: Use @PACKAGE_VERSION@ instead of
	@LIBRSVG_VERSION@.

	* art_render_mask.c:
	* rsvg-ft.c:
	* rsvg-paint-server.c:
	* rsvg.c:
	* test-ft-gtk.c:
	* test-ft.c:
	Fix includes.

2001-08-13  Darin Adler  <darin@bentspoon.com>

	* test-ft-gtk.c: (new_test_window): Use the new
	gtk_widget_set_size_request instead of the deprecated
	gtk_widget_set_usize.

2001-08-08  Darin Adler  <darin@bentspoon.com>

	* acinclude.m4: Move code for finding freetype here instead
	of getting it from the hack-macros directory.
	* autogen.sh: Don't use the hack-macros directory any more.

2001-08-06  Darin Adler  <darin@bentspoon.com>

	* configure.in: Replace uses of GNOME_PKGCONFIG_CHECK_MODULES
	with a single call to PKG_CHECK_MODULES.
	* Makefile.am: Use a single set of CFLAGS and LIBS for all.

2001-07-25  Ramiro Estrugo  <ramiro@fateware.com>

	* librsvg.spec.in:
	Add missing pkg-config file.
	
2001-07-25  Ramiro Estrugo  <ramiro@fateware.com>

	* Makefile.am:
	* librsvg.m4:
	Retire this thing which is no longer relevant in the GNOME2
	universe.
	
2001-07-25  Ramiro Estrugo  <ramiro@fateware.com>

	* .cvsignore:
	Im a dumbass.  Revert the last stupid change i made to ignore
	files that arent made no more.
	
2001-07-25  Ramiro Estrugo  <ramiro@fateware.com>

	* .cvsignore: